CI images update

--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -28,8 +28,8 @@ url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [demxanh.com]
 match = -18.5%%
-title = Chăn tuyết Hàn Quốc Soft 2kg màu xanh hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-hinh-trai-tim.html
+title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
 
 [ninhouse.vn]
 match = 32.0%%
