--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-08-03 06:37:33
+lastsearch = 2024-08-03 09:55:09
 
 [shopee.vn]
-match = -45.8%%
-title = chiếu điều hòa kèm gối giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
+match = 0.0%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa có gối 15
 url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 
 [demxanh.com]
-match = 29.2%%
-title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html?srsltid=AfmBOopYJSNT_9UJS8EyHOqxU7CM3nEIk_iiFyKbEuJR9qyjSOBym7kI
+match = -4.2%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [goni.vn]
 match = 4.2%%
@@ -69,7 +69,7 @@ url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 [foreverbedding.net]
 match = -20.8%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOorR_dPOOpRHgTyFxJI31tdARXvNpwu1GfdIFpAvaaDd5WrKN1Pb
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [joliefam.vn]
 match = -37.5%%
@@ -159,7 +159,7 @@ url = https://entershopping.vn/chieu-truc/Chieu-dieu-hoa.html
 [fptshop.com.vn]
 match = -45.8%%
 title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
-url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105?srsltid=AfmBOooQ1jWu9gHt4d_qPHdgXZ1cj_9qirpjI21EOHi4kEUyhThp6Mte
+url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 
 [hikawa.com.vn]
 match = -62.5%%
