--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-03 08:11:34
+lastsearch = 2024-08-03 10:07:13
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -143.8%%
-title = Gloss for life #beautytok #hudabeauty #lip ...
-url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
+match = -181.2%%
+title = Nhà nấm ngày bé mơ được ghé thăm #art #họcvẽcơbản ...
+url = https://www.tiktok.com/@tapvecungnhien/video/7223337440034032901
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -142,9 +142,9 @@ title = Camping Tent
 url = https://www.roadtripamerica.com/forum/showthread.php?48059-Camping-Tent
 
 [kllibrary.dbkl.gov.my]
-match = -137.5%%
-title = Search Results for Children Fiction, Chineses
-url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/results.displaypanel.resultstoolbar.pagination.selectpage:handlepagingviasearchsession/1?qu=Children+Fiction,+Chineses&pe=r:1&ps=300
+match = -87.5%%
+title = Search Results for Chinese, fiction
+url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/results.displaypanel.resultstoolbar.pagination.selectpage:handlepagingviasearchsession/3?qu=Chinese,++fiction&rw=300&pe=r:1&ic=true&ps=300&isd=true
 
 [www.lemon8-app.com]
 match = -118.8%%
@@ -217,9 +217,9 @@ title = Avatar Studios Logo : r/TheLastAirbender
 url = https://www.reddit.com/r/TheLastAirbender/comments/lrqa8p/avatar_studios_logo/
 
 [fkik433.com]
-match = -125.0%%
-title = tui warmdream 16 - Tui Magic Life Rixos Beldibi +16
-url = https://fkik433.com/blog/vljjrwrj-233/
+match = -131.2%%
+title = tui warmdream 15 - tui15lssd ice maker - fkik433.com
+url = https://fkik433.com/shop/iipyowtm-75/
 
 [www.pmoq458.com]
 match = -118.8%%
