--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-08-03 07:58:11
+lastsearch = 2024-08-03 09:52:00
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,14 +12,14 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = 30.4%%
-title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
-url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
+match = -60.9%%
+title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
 
 [chieutrucsaigon.com]
 match = 43.5%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
+title = CHIẾU TRÚC THANH CAO BẰNG 1M6X2M
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m6x2m.html
 
 [shopee.vn]
 match = 17.4%%
