--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-03 08:05:26
+lastsearch = 2024-08-03 09:50:37
 
 [shopee.vn]
-match = 2.9%%
-title = Chiếu điều hoà cao su non 3D chống nóng lưng kèm 2 vỏ ...
-url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-3D-chống-nóng-lưng-kèm-2-vỏ-gối-nằm-kích-thước-1m6x2m-1m8x2m-i.623633.16760413116
+match = 35.3%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [olbedding.com]
 match = 11.8%%
-title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
-url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 6 - Nệm Uy Tín
+url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-6/
 
 [goni.vn]
 match = 38.2%%
