--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-03 09:06:33
+lastsearch = 2024-08-03 09:56:53
 
 [www.bible.com]
-match = -100.0%%
-title = MATHAIA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MAT.22.MIZCLBSI
+match = -88.2%%
+title = LUKA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -17,9 +17,9 @@ title = Thufingte 1-31 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
-match = -129.4%%
-title = Matthew 20:22 NIV - “You don't know what you are
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
+match = -41.2%%
+title = Matthew 20:22 King James Version
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=KJV
 
 [mungchup.com]
 match = -100.0%%
@@ -32,9 +32,9 @@ title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
 url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [www.churchofjesuschrist.org]
-match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -17.6%%
+title = Doktrin na ol Kavanen 78
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -47,14 +47,14 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = -23.5%%
-title = What does Matthew 20:22 mean?
+match = 0.0%%
+title = 
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
-match = -111.8%%
-title = KHAWNBAWL FAPA HUAISEN LEH HMEITHAI FANU ...
-url = https://www.youtube.com/watch?v=7GusulFHxY4
+match = -94.1%%
+title = San Holo - bb u ok? (Official Visualiser)
+url = https://www.youtube.com/watch?v=vPAhSrVTtgk
 
 [www.biblestudytools.com]
 match = -129.4%%
@@ -72,9 +72,9 @@ title = Repairing threads on Inlet NOX sensor bung on 1-Box ...
 url = https://www.tiktok.com/@thedieseltechs/video/7306827916053138731
 
 [en.wikipedia.org]
-match = -36.4%%
-title = Sofi Tukker
-url = https://en.wikipedia.org/wiki/Sofi_Tukker
+match = 0.0%%
+title = SCP Foundation
+url = https://en.wikipedia.org/wiki/SCP_Foundation
 
 [www.instagram.com]
 match = -182.4%%
@@ -102,9 +102,9 @@ title = Job 20:22 In the midst of his plenty, he will be distressed
 url = https://biblehub.com/job/20-22.htm
 
 [www.bing.com]
-match = -58.8%%
-title = Translate from English to Hmong Daw
-url = http://www.bing.com/translator?from=en&to=mww
+match = -250.0%%
+title = Bing
+url = https://www.bing.com/
 
 [espndeportes.espn.com]
 match = -82.4%%
