--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-08-03 01:19:52
+lastsearch = 2024-08-03 10:02:00
 
 [thefelix.vn]
 match = -50.0%%
@@ -67,9 +67,9 @@ title = [GIÁ ĐỆM 2024] Nệm cao su thiên nhiên ...
 url = https://ninhouse.vn/collections/nem-cao-su-thien-nhien
 
 [www.lazada.vn]
-match = 10.5%%
-title = Nệm cao su thiên thiên trợ lực Felix Support - Độ cứng ...
-url = https://www.lazada.vn/products/nem-cao-su-thien-thien-tro-luc-felix-support-do-cung-tro-luc-cap-do-2-15cm-i2295070079.html
+match = 5.3%%
+title = Nệm cao su thiên nhiên Felix Comfort - Độ cứng tiêu chuẩn ...
+url = https://www.lazada.vn/products/nem-cao-su-thien-nhien-felix-comfort-do-cung-tieu-chuan-cap-do-1-15cm-i2294959349-s11133506275.html
 
 [nemcaosuthangloi.vn]
 match = 18.2%%
