--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-08-03 04:19:18
+lastsearch = 2024-08-03 10:26:03
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -12,9 +12,9 @@ title = Everon EPT20041 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
 url = https://www.everonvn.vn/chi-tiet/Everon-EPT20041.html
 
 [everon.online]
-match = 17.9%%
-title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
+match = -21.4%%
+title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
+url = https://everon.online/collections/chan-bon-mua-everon
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -24,7 +24,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 [demxanh.com]
 match = -32.1%%
 title = Đệm bốn mùa Olympia Massage vải gấm xốp chính hãng
-url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html?srsltid=AfmBOoqL2ILOz2GXFi9-lC6hctjvoYb9oxlU0lR8M8dYNUKnO_uQppyf
+url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html
 
 [everonminhkhai.com]
 match = -26.7%%
@@ -38,8 +38,8 @@ url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon
 
 [changagoidemsonghong.com]
 match = -53.6%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
-url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc62
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22052
+url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc52
 
 [songhong.info]
 match = -53.6%%
