--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-08-03 06:34:05
+lastsearch = 2024-08-03 10:22:10
 
 [chieutruc.info]
 match = -73.9%%
@@ -18,8 +18,8 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
 
 [demxanh.com]
 match = -39.1%%
-title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOopSyT5tdXT4w74tWpzxsU-bGN-G9R6qGJqB44xrAqJckKHswdYf
+title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
 
 [shopee.vn]
 match = -78.3%%
@@ -135,4 +135,9 @@ url = https://thegioidemtot.vn/dt17840-chie-u-tru-c-cao-ba-ng-1m8x2m.html
 match = -113.0%%
 title = Báo cáo về việc điều chỉnh cục bộ Đồ án điều chỉnh Quy hoạch ...
 url = https://sovhtt.caobang.gov.vn/Default.aspx?sid=1355&pageid=34288&catid=94914&id=858488&catname=quy-hoach-phuong-xa&title=bao-cao-ve-viec-dieu-chinh-cuc-bo-do-an-dieu-chinh-quy-hoach-chung-thi-tran-pac-miau-huyen-bao-l
+
+[baocaobang.vn]
+match = -13.0%%
+title = Độc đáo các sản phẩm từ trúc Cao Bằng
+url = https://baocaobang.vn/-3524.html
 
