--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-03 09:56:13
+lastsearch = 2024-08-03 10:25:19
 
 [hoa18.com]
 match = -84.2%%
@@ -112,9 +112,9 @@ title = Cách tính Công suất nguồn bức xạ, hiệu suất lượng tử
 url = https://vietjack.com/vat-ly-lop-12/cong-suat-nguon-buc-xa-hieu-suat-luong-tu.jsp
 
 [baolongan.vn]
-match = -94.7%%
-title = Đức Huệ - Lan tỏa các tuyến đường xanh, sạch, đẹp
-url = https://baolongan.vn/duc-hue-lan-toa-cac-tuyen-duong-xanh-sach-dep-a179422.html
+match = -89.5%%
+title = Tân An - 'Tăng tốc' xây dựng đô thị văn minh
+url = https://baolongan.vn/tan-an-tang-toc-xay-dung-do-thi-van-minh-a180218.html
 
 [caycanhmoc.vn]
 match = -110.5%%
