--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-08-03 08:03:01
+lastsearch = 2024-08-03 10:28:08
 
 [demxanh.com]
 match = 38.2%%
 title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html?srsltid=AfmBOordlPA2ID1NRAuSksnwx1oq0M1rJOWpMvzo1Bk7uBcycKGGoQip
 
 [shopee.vn]
-match = 23.5%%
-title = chiếu điều hòa cao su non 5d giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=chiếu điều hòa cao su non 5d
+match = -2.9%%
+title = Chiếu điều hòa cao su non nhập khẩu nguyên chiếc (tặng ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-nhập-khẩu-nguyên-chiếc-(tặng-kèm-2-vỏ-gối)-i.14181335.2002294679
 
 [foreverbedding.net]
 match = 32.4%%
 title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong?srsltid=AfmBOoos6VqbOHJSVExSdq4n0GmTaRa-t2uKMozxm8Rho0iiZt05V7FI
 
 [demchinhhang.com]
 match = 53.1%%
@@ -99,7 +99,7 @@ url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 [www.lazada.vn]
 match = -5.9%%
 title = Chiếu điều hòa cao su non, chiếu điều hòa kích thước lớn ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html?srsltid=AfmBOor4G8BW1TGOspPFg-SdSWPhH40EsKcoK35hqcqRqNnfTGWc49vS
 
 [ru9.vn]
 match = 8.8%%
