--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-03 04:53:30
+lastsearch = 2024-08-03 10:13:10
 
 [helloviettravel.com]
-match = -181.2%%
-title = Tour Xuyên Việt 18 ngày 17 đêm - Hello Vietnam Travel
-url = https://helloviettravel.com/tour-xuyen-viet-18-ngay-17-dem-2.html
+match = -150.0%%
+title = Tour xuyên Việt 21 ngày - Hello Việt Nam Travel
+url = https://helloviettravel.com/hlvn_xv12-du-lich-xuyen-viet-21-ngay-20-dem-khoi-hanh-tu-tp-hcm.html
 
 [saovangtravel.com]
 match = -50.0%%
