--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-03 00:29:37
+lastsearch = 2024-08-03 10:18:41
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -43,8 +43,8 @@ url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ld
 
 [shopee.vn]
 match = 31.2%%
-title = Chiếu Lác Trắng Xếp Gọn
-url = https://shopee.vn/Chiếu-Lác-Trắng-Xếp-Gọn-i.58697470.8505363108
+title = Chiếu lác màu xuất khấu
+url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
 
 [www.thegioididong.com]
 match = -193.8%%
