--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-03 06:33:04
+lastsearch = 2024-08-03 10:16:56
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -175.0%%
-title = Nước lũ dâng cao, nhiều nơi chìm trong biển nước | VTC16
-url = https://www.youtube.com/watch?v=d0pMIC4bxBQ
+match = -218.8%%
+title = tuyệt chiêu nối ống nước hai đầu cố định cực hay, cách sửa ...
+url = https://www.youtube.com/watch?v=DhNa7JeUr54
 
 [hawater.com.vn]
 match = -75.0%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -22.2%%
-title = Nhược Lạc
-url = https://www.facebook.com/nhuoclac.writing/
+match = -8.3%%
+title = Mai Thanh Hạ
+url = https://www.facebook.com/maithanhha19/
 
 [suckhoedoisong.vn]
 match = -225.0%%
@@ -695,4 +695,14 @@ url = https://vinhphuc.gov.vn/ct/cms/tintuc/Lists/VanHoaXaHoi/View_Detail.aspx?I
 match = -187.5%%
 title = iPhone 16 Pro Max được dự đoán có viền mỏng nhất thế ...
 url = https://baocantho.com.vn/iphone-16-pro-max-duoc-du-doan-co-vien-mong-nhat-the-gioi-thiet-ke-tinh-te-a176762.html
+
+[vietbao.com]
+match = -93.8%%
+title = Đặng Toản Và Ẩn Thoại Đêm - Điểm Sách
+url = https://vietbao.com/a319700/dang-toan-va-an-thoai-dem
+
+[baotintuc.vn]
+match = -200.0%%
+title = Tổng Bí thư Nguyễn Phú Trọng với Đảng ủy Khối các cơ ...
+url = https://baotintuc.vn/chinh-tri/tong-bi-thu-nguyen-phu-trong-voi-dang-uy-khoi-cac-co-quan-trung-uong-20240803092407595.htm
 
