--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-03 06:20:39
+lastsearch = 2024-08-03 10:29:12
 
 [shopee.vn]
-match = 19.4%%
-title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
-url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
+match = 29.0%%
+title = Chiếu nhựa (quê hương thái bình)kt 1m6 và 1m8
+url = https://shopee.vn/Chiếu-nhựa-(quê-hương-thái-bình)kt-1m6-và-1m8-i.143185988.9645236178
 
 [tiki.vn]
 match = 48.4%%
@@ -17,9 +17,9 @@ title = Mua chiếu nhựa thái bình bền đẹp đủ cỡ
 url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p182155456.html?spid=182155480
 
 [www.diepxuan.com]
-match = 58.1%%
-title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
+match = 48.4%%
+title = Điệp Xuân Chiếu gấp Thái Bình 180x200
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x200.html
 
 [m.facebook.com]
 match = 12.9%%
