--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-03 03:46:29
+lastsearch = 2024-08-03 10:24:17
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -285.7%%
-title = Cập nhật giá TIVI dưới 10 triệu trong tháng 7 tại Điện máy XANH
-url = https://www.youtube.com/watch?v=j_AHP98h1wM
+match = -185.7%%
+title = HƯỚNG DẪN CÁCH PHỤC HỒI THẺ XANH SAU KHIỞ VIỆT ...
+url = https://www.youtube.com/watch?v=3ycihnhaARo
 
 [www.reddit.com]
 match = -64.3%%
@@ -32,8 +32,8 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -7.1%%
-title = Explore my Options
+match = -50.0%%
+title = Explore my Options | USCIS
 url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
@@ -87,9 +87,9 @@ title = Green card
 url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = 7.1%%
-title = The Mask (1994)
-url = https://www.imdb.com/title/tt0110475/
+match = 0.0%%
+title = Blue Bayou (2021)
+url = https://www.imdb.com/title/tt11121664/
 
 [www.boundless.com]
 match = -128.6%%
