CI images update

--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-03 06:13:21
+lastsearch = 2024-08-03 11:31:04
 
 [munghoangphat.com]
 match = -24.0%%
@@ -32,9 +32,9 @@ title = Màn tự bung dinh vuong 16
 url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 
 [www.mantubung.com]
-match = -52.0%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -8.0%%
+title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
+url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 
 [demvip.vn]
 match = 52.0%%
