--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-03 06:19:56
+lastsearch = 2024-08-03 11:20:57
 
 [www.tiktok.com]
-match = -181.2%%
-title = use my discount code AYASCHANNEL1 on @YesStyle ...
-url = https://www.tiktok.com/@ayas.channel/video/7311712186034851078
+match = -6.2%%
+title = Huda Beauty Lip Stain
+url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [digitalmaine.com]
 match = -75.0%%
