--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-03 10:05:51
+lastsearch = 2024-08-03 11:19:14
 
 [shopee.vn]
-match = -126.3%%
-title = Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm đẹp ...
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.49212472.796826351
+match = -36.8%%
+title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -22,9 +22,9 @@ title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
 url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
 
 [chieutrelinhchi.com]
-match = -94.7%%
-title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
-url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
+match = -89.5%%
+title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
+url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
 match = -110.5%%
