--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-03 04:59:07
+lastsearch = 2024-08-03 11:21:18
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = 3.6%%
-title = Chiếu nhựa Việt Nam 1M6 X 2M - RẺ NHẤT - CN1M6
-url = https://www.sendo.vn/chieu-nhua-viet-nam-1m6-x-2m-re-nha-t-48369986.html
+match = 17.9%%
+title = Chiếu nhựa nguyên sinh gấp gọn 1m8 x 3m
+url = https://www.sendo.vn/chieu-nhua-nguyen-sinh-gap-gon-1m8-x-3m-hang-viet-nam-chat-luong-cao-116062190.html
 
 [mia.vn]
 match = -39.3%%
