--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-03 09:52:22
+lastsearch = 2024-08-03 11:29:21
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -52,9 +52,9 @@ title = Quy trình sản xuất chiếu trúc tre Việt Nam - Phổ Mến Thái
 url = https://www.youtube.com/watch?v=hOk5gnWzPhc
 
 [www.facebook.com]
-match = 8.3%%
-title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
-url = https://www.facebook.com/chieutructot/
+match = 41.7%%
+title = Chiếu Trúc Việt Nam | Hanoi
+url = https://www.facebook.com/chieutruc.vn/
 
 [chieutrucsaigon.com]
 match = 0.0%%
