--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-03 10:44:37
+lastsearch = 2024-08-03 11:18:33
 
 [www.gov.uk]
 match = -200.0%%
@@ -32,9 +32,9 @@ title = Movie Information | Tickets | Showtimes |
 url = https://readingcinemas.com/
 
 [www.youtube.com]
-match = -233.3%%
-title = Deadpool & Wolverine | Official Teaser | In Theaters July 26
-url = https://www.youtube.com/watch?v=uJMCNJP2ipI
+match = -193.3%%
+title = Adamantium Confirmed: We’re Closer Than Ever To The ...
+url = https://www.youtube.com/watch?v=zXPe48nbv08
 
 [vietjack.com]
 match = -106.7%%
