--- a/images/nem-sieu-nhe-5f-14/config.ini
+++ b/images/nem-sieu-nhe-5f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-14.html
 lastopen = 2024-06-09 23:19:00
 
 [search]
-lastsearch = 2024-08-03 04:29:43
+lastsearch = 2024-08-03 11:27:57
 
 [tuhung.net]
 match = -116.7%%
@@ -12,9 +12,9 @@ title = Lưu trữ Nệm PE Hàn Quốc dày 3F - Nội Thất Tứ Hưng
 url = https://tuhung.net/danh-muc-san-pham/nem-pe-han-quoc/nem-pe-han-quoc-day-3f/
 
 [shopee.vn]
-match = -100.0%%
-title = Nệm 1m2 - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
-url = https://shopee.vn/list/nệm/1m2
+match = -161.1%%
+title = Topper Nệm Mỏng Topper Nệm Trải Giường Trải Sàn Siêu ...
+url = https://shopee.vn/Topper-Nệm-Mỏng-Topper-Nệm-Trải-Giường-Trải-Sàn-Siêu-Mỏng-Siêu-Mát-Cho-Cả-4-Mùa-i.73225127.2732275670
 
 [congtynemthangloi.com.vn]
 match = -166.7%%
@@ -54,7 +54,7 @@ url = https://sieuthicholon.com/tag/nem-topper-foam-ti/?trang=14
 [www.diepxuan.com]
 match = -7.7%%
 title = Điệp Xuân Nệm
-url = https://www.diepxuan.com/catalog/category/view/s/nem/id/773/
+url = https://www.diepxuan.com/catalog/category/view/s/nem/id/773/?srsltid=AfmBOoor1sHt9FohchOzhrISpJJ3xYD8JY7NBsqR4gzED-mfLkd-CIJo
 
 [m.facebook.com]
 match = -144.4%%
