--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-03 09:41:08
+lastsearch = 2024-08-03 11:22:21
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
@@ -67,9 +67,9 @@ title = Riot Games manipula partidas para fazer você perder? ...
 url = https://br.ign.com/league-of-legends/127310/news/riot-games-manipula-partidas-para-fazer-voce-perder-cientista-analisa-178-mil-jogos-de-lol-e-tem-a-r
 
 [koncertbooking.com]
-match = -150.0%%
-title = Lil Frakk nélkül folytatódott a Sávlekötő Camp by OTP Junior
-url = https://koncertbooking.com/blog/lil-frakk-nelkul-folytatodott-a-savlekoto-camp-by-otp-junior
+match = -70.0%%
+title = Tényleg nem kell félni az AI-tól zenészként?
+url = https://koncertbooking.com/blog/tenyleg-nem-kell-felni-az-ai-tol-zeneszkent-koncertbooking-podcast-s1e4
 
 [bo3.gg]
 match = -120.0%%
@@ -182,9 +182,9 @@ title = League of Legends Champions Korea 2024
 url = https://pt.wikipedia.org/wiki/League_of_Legends_Champions_Korea_2024
 
 [infostart.hu]
-match = -110.0%%
-title = Lehmann Csongor 11., Bicsák Bence 16. triatlonban
-url = https://infostart.hu/sport/parizs-2024/2024/07/31/lehmann-csongor-11-bicsak-bence-16-triatlonban
+match = -120.0%%
+title = Imre Bence: Most már máshogy oldanám meg az utolsó ...
+url = https://infostart.hu/sport/parizs-2024/2024/07/31/imre-bence-most-mar-mashogy-oldanam-meg-az-utolso-helyzetet
 
 [laseoulite.substack.com]
 match = -150.0%%
