--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-08-03 09:51:29
+lastsearch = 2024-08-03 11:16:08
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 15.8%%
-title = Eric Huang, MD, PhD
-url = https://profiles.ucsf.edu/eric.huang
+match = 0.0%%
+title = Jennifer Fung, PhD
+url = https://profiles.ucsf.edu/jennifer.fung
 
 [cityofclovis.com]
 match = -65.0%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q2.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Uncoupling Proteins: Role in Insulin Resistance and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
+match = -165.0%%
+title = Use of Polymeric Nanoparticle Platform Targeting the Liver ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6506187/
 
 [www.energy.gov]
 match = -95.0%%
@@ -152,9 +152,9 @@ title = PowerFlex 750-Series AC Drives Reference Manual
 url = https://literature.rockwellautomation.com/idc/groups/literature/documents/rm/750-rm002_-en-p.pdf
 
 [som.cuanschutz.edu]
-match = -170.0%%
-title = Kurt Stenmark, MD Professor, Pediatrics-Critical Care Medicine
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/15570
+match = -100.0%%
+title = Larry Allen, MD Professor, Medicine-Cardiology
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/13824
 
 [vc2040.org]
 match = -145.0%%
@@ -199,7 +199,7 @@ url = https://profiles.ucdavis.edu/merrill.gershwin
 [liftoff.energy.gov]
 match = -150.0%%
 title = Innovative Grid Deployment - Pathways to Commercial Liftoff
-url = https://liftoff.energy.gov/wp-content/uploads/2024/04/Liftoff_Innovative-Grid-Deployment_Final_4.12.pdf
+url = https://liftoff.energy.gov/wp-content/uploads/2024/04/Liftoff_Innovative-Grid-Deployment_Final_4.15.pdf
 
 [westmexico.com.mx]
 match = -142.9%%
@@ -425,4 +425,9 @@ url = https://www.sheffield.ac.uk/smph/people/clinical-medicine/james-catto
 match = -175.0%%
 title = A Brief History, Current Status Report And Options for Next steps
 url = https://www.cirm.ca.gov/wp-content/uploads/archive/files/about_cirm/Outside_Review_121710.pdf
+
+[facultycouncil.colostate.edu]
+match = -155.0%%
+title = An Insider's Guide to How US University Finances Really Work
+url = https://facultycouncil.colostate.edu/wp-content/uploads/sites/29/2024/04/Comrie-Like-Nobodys-Business.pdf
 
