--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-08-03 10:17:38
+lastsearch = 2024-08-03 11:31:46
 
 [demxanh.com]
-match = 28.0%%
-title = Chăn ga gối Singapore lụa
-url = https://demxanh.com/chan-ga-goi-singapore-lua.html
+match = 13.8%%
+title = Chăn ga gối Singapore Pyeoda Luxury 5 món
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
