--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-03 03:29:04
+lastsearch = 2024-08-03 11:40:25
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = NỆM CAO SU THIÊN NHIÊN EVERHOME - DELUXE
 url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome-deluxe-sieu-thi-nem-com.html
 
 [demxanh.com]
-match = -14.3%%
-title = Đệm bông ép Everhome 2m giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-everhome-2m-gia-bao-nhieu.html
+match = -19.0%%
+title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
 
 [www.ebay.com]
 match = -95.2%%
@@ -27,9 +27,9 @@ title = Vietnamese mixed script
 url = https://www.quora.com/What-are-some-examples-where-Vietnamese-was-written-in-mixed-Han-Latin-script
 
 [sieuthidemonline.vn]
-match = -61.9%%
-title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
-url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
+match = -85.7%%
+title = Đệm cao su thiên nhiên cao cấp Lavender Everhome
+url = https://sieuthidemonline.vn/dem-cao-su-lavender/
 
 [thegioidemviet.vn]
 match = -9.5%%
