--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-08-02 21:43:00
+lastsearch = 2024-08-03 11:39:42
 
 [www.linkedin.com]
-match = -145.5%%
-title = Tam Tram - Kansas Army National Guard
-url = https://www.linkedin.com/in/tam-tram-a3286573
+match = -172.7%%
+title = Tam Tran - Wichita, Kansas, United States
+url = https://www.linkedin.com/in/tam-tran-0a0005213
 
 [sos.ks.gov]
 match = -9.1%%
@@ -420,4 +420,9 @@ url = https://tamtamhotelsupplies.com/
 match = -327.3%%
 title = Three−Letter Designator/Aircraft Company/Telephony ...
 url = https://www.faa.gov/air_traffic/publications/atpubs/cnt_html/chap3_section_3.html
+
+[www.rrca.org]
+match = -50.0%%
+title = Events
+url = https://www.rrca.org/find-events/
 
