--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-03 04:14:27
+lastsearch = 2024-08-03 11:47:54
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -17,9 +17,9 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -127.3%%
-title = 2 trẻ em hoạt hình không thấm nước dày chần điều chỉnh nổi ...
-url = https://www.lazada.vn/products/2-tre-em-hoat-hinh-khong-tham-nuoc-day-chan-dieu-chinh-noi-tam-boc-vua-van-140x190-vo-boc-nem-1-chiec-i2331485094.html
+match = -36.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
+url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
 match = -104.5%%
