CI images update

--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-03 11:29:21
+lastsearch = 2024-08-03 12:42:01
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -52,9 +52,9 @@ title = Quy trình sản xuất chiếu trúc tre Việt Nam - Phổ Mến Thái
 url = https://www.youtube.com/watch?v=hOk5gnWzPhc
 
 [www.facebook.com]
-match = 41.7%%
-title = Chiếu Trúc Việt Nam | Hanoi
-url = https://www.facebook.com/chieutruc.vn/
+match = 8.3%%
+title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
+url = https://www.facebook.com/chieutructot/
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -350,4 +350,9 @@ url = https://www.vieclamtot.com/tags/bao-ve-ca-dem
 match = -50.0%%
 title = Mini Essay 4 | Writing 303: A Personal Essay
 url = https://you.stonybrook.edu/wrt303/2015/12/01/miniessay4/
+
+[www.google.com]
+match = -45.8%%
+title = maps/@21.001139,105.847882,17z?hl=vi
+url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
