--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-03 03:30:28
+lastsearch = 2024-08-03 12:31:27
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 01
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
 
 [www.diepxuan.com]
 match = -3.6%%
@@ -24,7 +24,7 @@ url = https://mgaleg.maryland.gov/mgawebsite/Committees/Media/false?cmte=b&t&ys=
 [vuanem.com]
 match = -57.1%%
 title = Top 8 cửa hàng bán chăn ga gối nệm Quận 1 chất lượng ...
-url = https://vuanem.com/blog/cua-hang-chan-ga-goi-nem-quan-1.html?srsltid=AfmBOoqCGosMWvwwp0reCT5JDp19qVRwXQ8IQ5FwC_Kk_fiBXAH19K6_
+url = https://vuanem.com/blog/cua-hang-chan-ga-goi-nem-quan-1.html
 
 [demxinh.vn]
 match = -67.9%%
