--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-03 06:29:58
+lastsearch = 2024-08-03 12:38:54
 
 [everon.online]
 match = 12.0%%
@@ -12,14 +12,14 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -32.0%%
-title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
+match = -24.0%%
+title = Bộ chăn bốn mùa Chân Trời Xanh - ESM24014 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-chan-troi-xanh-esm24014
 
 [everonvn.com.vn]
 match = 28.0%%
 title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon?srsltid=AfmBOor7_q9imv9pWx0bR-JsmHWyKtm0ZD_b6VpDGAT31x6sJRaIUAwE
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -60.0%%
-title = BÍCH PHƯƠNG - Nói Thương Nhau Thì Đừng Làm Trái Tim ...
-url = https://www.youtube.com/watch?v=2DuthnSIeYY
+match = -72.0%%
+title = Bài Ca Bốn Mùa | Liên khúc nhạc thiếu nhi hay nhất | Chun Chin
+url = https://www.youtube.com/watch?v=nISd7_DLdsk
 
 [bdshanoi.com.vn]
 match = -4.0%%
