--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-03 08:10:56
+lastsearch = 2024-08-03 12:32:09
 
 [www.instagram.com]
 match = -123.1%%
@@ -12,14 +12,14 @@ title = Chan Dior Sunshade (@chan_dior_sunshade)
 url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
-match = -276.9%%
-title = Chow hoi ting Chow - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
+match = -215.4%%
+title = Vincy Chan - Christian Dior高級時裝公司
+url = https://hk.linkedin.com/in/vincy-chan-982992221
 
 [wwd.com]
-match = -184.6%%
-title = Kimbee Chan Furthers Creative Pursuit With ...
-url = https://wwd.com/fashion-news/fashion-scoops/kimbee-chan-knitwear-workshop-happy-yarn-1235938455/
+match = -253.8%%
+title = Balenciaga's Beats, Tommy's New Face, Dior Taps Quenard
+url = https://wwd.com/fashion-news/fashion-scoops/balenciaga-hilfiger-quenard-canada-goose-idris-1235943664/
 
 [vote.umich.edu]
 match = -253.8%%
@@ -350,4 +350,9 @@ url = https://www.tripadvisor.com/Attraction_Review-g1066456-d16707145-Reviews-C
 match = -176.9%%
 title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.com.my/u/justforu.shop/reviews/
+
+[www.herworld.com]
+match = -300.0%%
+title = 5 things to know about Hong Kong's richest woman, Kimbie ...
+url = https://www.herworld.com/pov/people/things-know-about-hong-kongs-richest-woman-kimbie-chan-hoi-wan
 
