--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-08-03 09:55:09
+lastsearch = 2024-08-03 12:29:40
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -45.8%%
+title = chiếu điều hòa kèm gối giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa có gối 15
 url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 
 [demxanh.com]
-match = -4.2%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 29.2%%
+title = Chiếu điều hòa mây viền lụa loại đẹp
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [goni.vn]
 match = 4.2%%
@@ -32,9 +32,9 @@ title = Chiếu mát, chiếu điều hòa cao cấp Luxury Home
 url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/
 
 [kyoryo.vn]
-match = 12.5%%
-title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
-url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
+match = -58.3%%
+title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyoryo
+url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [sieuthidem.vn]
 match = 50.0%%
@@ -67,9 +67,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [foreverbedding.net]
-match = -20.8%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = 37.5%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [joliefam.vn]
 match = -37.5%%
