--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-03 04:51:47
+lastsearch = 2024-08-03 12:39:57
 
 [shopee.vn]
-match = -33.3%%
-title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
-url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
+match = -40.7%%
+title = Chiếu điều hòa mây lạnh cao cấp 2 lớp ( loại 1, có nhiều ...
+url = https://shopee.vn/Chiếu-điều-hòa-mây-lạnh-cao-cấp-2-lớp-(-loại-1-có-nhiều-loại-kích-thước)-không-kèm-vỏ-gối-i.17226131.25877940173
 
 [demxanh.com]
 match = 14.8%%
 title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOoocItgK4AYoSjJsqOOra4rr3O1STxHgAbA9y0rGOE9_M4_N2DDy
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOooz16mXGdsUhSizgEU-DVfRjl9ST0YQr2dw0WI1Sbpi_ofraWjL
 
 [tiki.vn]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [foreverbedding.net]
-match = -59.3%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOopqxvCF-WApr5xISfSR2IWvN6T-jhCml5K_9Ziv0boswrihY8ge
+match = 0.0%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOoqvxk3UrDTL5QRWJsIV6Nbhsbk6Adj2xls8HXJ9-nLttLw9-kzz
 
 [kyoryo.vn]
 match = -40.7%%
@@ -109,7 +109,7 @@ url = https://voicon.net/bo-chieu-goi-dieu-hoa-cao-cap/
 [vtvhyundai.vn]
 match = -22.2%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoq5N6H6r0nddhMeqWt63oxK7XBdB0zjMIJ6iqHVwYZcuhy5i0I0
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoq-8VnxxEP9-HSg4Ym91fZh8qYRuQo6Jlm0gkktf1fsutE1e4U5
 
 [noithattana.vn]
 match = 29.6%%
