--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-03 11:31:28
+lastsearch = 2024-08-03 12:33:33
 
 [helloviettravel.com]
-match = -150.0%%
-title = Tour xuyên Việt 21 ngày - Hello Việt Nam Travel
-url = https://helloviettravel.com/hlvn_xv12-du-lich-xuyen-viet-21-ngay-20-dem-khoi-hanh-tu-tp-hcm.html
+match = -181.2%%
+title = Tour Xuyên Việt 18 ngày 17 đêm - Hello Vietnam Travel
+url = https://helloviettravel.com/tour-xuyen-viet-18-ngay-17-dem-2.html
 
 [saovangtravel.com]
 match = -50.0%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = 12.5%%
-title = Bản tin Du lịch 18/7/2024
-url = https://www.youtube.com/watch?v=JPdEyoI0u4Y
+match = -193.8%%
+title = Khám phá 18 Tầng địa ngục tại Làng du lịch Mỹ Khánh Cần Thơ
+url = https://www.youtube.com/watch?v=ql7G7p6JNJE
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
