--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-03 08:00:58
+lastsearch = 2024-08-03 12:39:15
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -667,8 +667,8 @@ title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
 
 [vba.vn]
-match = -27.3%%
-title = Saigon Heat
+match = -81.2%%
+title = GIẢI BÓNG RỔ CHUYÊN NGHIỆP VIỆT NAM
 url = https://vba.vn/clubs/saigon-heat
 
 [hanoionline.vn]
@@ -682,9 +682,9 @@ title = Cát Tiên: Quyết liệt triển khai các biện pháp phòng, chốn
 url = https://baolamdong.vn/xa-hoi/202408/cat-tien-quyet-liet-trien-khai-cac-bien-phap-phong-chong-benh-sot-xuat-huyet-e201d52/
 
 [www.pnj.com.vn]
-match = -200.0%%
-title = Trang Sức Vàng: Vàng Trắng, Vàng Ý, Vàng 18K, 24K Cao ...
-url = https://www.pnj.com.vn/trang-suc-vang/
+match = -162.5%%
+title = Dây Chuyền Nam Nữ Vàng Bạc Kim Cương Đẹp, Cao Cấp ...
+url = https://www.pnj.com.vn/day-chuyen/
 
 [www.tiktok.com]
 match = 27.3%%
