--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-03 09:47:13
+lastsearch = 2024-08-03 12:44:26
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -47,9 +47,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.youtube.com]
-match = -108.3%%
-title = Anh lo ngại căng thẳng leo thang giữa Israel và Hezbollah ...
-url = https://www.youtube.com/watch?v=bREDycaDv3E
+match = -66.7%%
+title = 🔴 Trực tiếp: TRUNG QUỐC - VIỆT NAM | Giải bóng đá U19 ...
+url = https://www.youtube.com/watch?v=3U6gbHFBMhs
 
 [www.chotot.com]
 match = -54.2%%
