--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-08-03 10:46:38
+lastsearch = 2024-08-03 12:30:21
 
 [demtot.com]
 match = 4.8%%
@@ -22,9 +22,9 @@ title = [Freeship + Quà tặng] - Đệm lò xo Techwood Tuấn Anh rẻ ...
 url = https://shopee.vn/-Freeship-Quà-tặng-Đệm-lò-xo-Techwood-Tuấn-Anh-rẻ-nhất-thị-trường-i.74770078.6992817339
 
 [demxanh.com]
-match = -57.1%%
-title = Đệm lò xo 1m5x1m9 (150x190cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m5x1m9-150x190cm-gia-bao-nhieu.html
+match = -33.3%%
+title = Đệm lò xo Tuấn Anh Techwood không bóc dày 23cm
+url = https://demxanh.com/dem-lo-xo-techwood-sale-off-50.html
 
 [maybedding.vn]
 match = 38.9%%
