--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-03 11:50:41
+lastsearch = 2024-08-03 12:49:29
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx_D33CX&sig=ACfU3U35zu4J84ICo6KBiRzAC5OwSOL0gw&hl=en&sa=X&ved=2ahUKEwi2vIb9gtiHAxUTg4kEHbRoOQgQ6AF6BAgXEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx_D7_FV&sig=ACfU3U22BHZ_b6Snid-kIt3xTGXcpoenpg&hl=en&sa=X&ved=2ahUKEwii2LGPkNiHAxXghIkEHXprJLEQ6AF6BAgYEAM
 
 [ottawabraves.com]
 match = -292.3%%
