--- a/images/nem-dreamland-uc-160x200x09/config.ini
+++ b/images/nem-dreamland-uc-160x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-dreamland-uc-160x200x09.html
 lastopen = 2024-06-07 01:35:10
 
 [search]
-lastsearch = 2024-08-03 11:34:56
+lastsearch = 2024-08-03 12:51:50
 
 [www.diepxuan.com]
 match = 51.9%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOorDuCIsnENjNbE-RsPsKUtxBG76yjbzMXE8hUElS-kkg6ZRODTf
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [forums.brianenos.com]
 match = -66.7%%
