--- a/images/ruot-nem-warmdream-180x200x09/config.ini
+++ b/images/ruot-nem-warmdream-180x200x09/config.ini
@@ -62,7 +62,7 @@ title = Unboxing- worlds lightest crutches from INDESmed!
 url = https://www.youtube.com/watch?v=SaIVSPk5bEc
 
 [dreamline.com]
-match = -20.7%%
-title = Enigma-X Sliding Shower Door - Dreamline
-url = https://dreamline.com/shower-doors/enigma-x-sliding-shower-door_sd61720760vdx06.html
+match = -34.5%%
+title = Enigma-X Sliding Shower Door & Base - Dreamline
+url = https://dreamline.com/shower-doors/dreamline-enigma-x-fully-frameless-sliding-shower-door-and-slimline-single-threshold-shower-base_dl-6619c-07cl.html
 
