--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-03 10:25:40
+lastsearch = 2024-08-03 12:52:48
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgoMIqm5&sig=ACfU3U2Oxkzzm8vacyKKFNS_nEkARRULkQ&hl=en&sa=X&ved=2ahUKEwjyqcf879eHAxXlLkQIHfulEy8Q6AF6BAgkEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgoNHood&sig=ACfU3U13eTvCEPLCO4phuTFSt40KQBDbiw&hl=en&sa=X&ved=2ahUKEwiL0YLukNiHAxUXvokEHdqyJ6QQ6AF6BAgaEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
