--- a/images/ruot-goi-vuong-warmdream-45x45/config.ini
+++ b/images/ruot-goi-vuong-warmdream-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-vuong-warmdream-45x45.html
 lastopen = 2024-06-07 01:58:20
 
 [search]
-lastsearch = 2024-08-03 09:41:27
+lastsearch = 2024-08-03 12:56:28
 
 [bellizeno.com]
 match = -14.3%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Gối-vuông-trang-trí-gối-sofa-đơn-giản-(có-kè
 [happynest.vn]
 match = -43.3%%
 title = Gối Vuông Trang Trí, Gối Sofa Đơn Giản Có Kèm Ruột Gối ...
-url = https://happynest.vn/shop/0902001713/goi-vuong-trang-tri,-goi-sofa-don-gian-co-kem-ruot-goi-make-my-home-piece-13.html
+url = https://happynest.vn/shop/0902001709/goi-vuong-trang-tri,-goi-sofa-don-gian-co-kem-ruot-goi-make-my-home-piece-9.html
 
 [sieuthicholon.com]
 match = -30.0%%
@@ -64,7 +64,7 @@ url = https://muathongminh.vn/ruot-goi-vuong-45x45cm-bong-gon-trang-cao-cap-daco
 [demxanh.com]
 match = 10.0%%
 title = Gối tựa Đệm Xanh giá rẻ tại Hà Nội
-url = https://demxanh.com/goi-tua-dem-xanh.html
+url = https://demxanh.com/goi-tua-dem-xanh.html?srsltid=AfmBOorpjjW_6RbSMs_zcZ_ia41k6y6nG6SIRs5mNraBDI_DXVpj5-Rj
 
 [www.lazada.vn]
 match = 26.7%%
