--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-03 11:42:26
+lastsearch = 2024-08-03 12:47:26
 
 [bilystore.vn]
 match = -95.2%%
@@ -13,8 +13,8 @@ url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
 match = -85.7%%
-title = Khăn trải giường, đắp người LOẠI 1 siêu mềm, dày dặn ...
-url = https://shopee.vn/Khăn-trải-giường-đắp-người-LOẠI-1-siêu-mềm-dày-dặn-cho-spa-thẩm-mỹ-viện-kt-90*1m9-nặng-700GR-i.235726001.14824188007
+title = [ ☘️SALE GIẢM GIÁ SỐC ] Thảm lông cừu trải giường, ...
+url = https://shopee.vn/-☘️SALE-GIẢM-GIÁ-SỐC-Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-thảm-nhung-đa-năng-thảm-trải-giường-3-lớp-i.267488477.12803406033
 
 [tiki.vn]
 match = -38.1%%
@@ -144,7 +144,7 @@ url = https://decor.lanha.vn/san-pham/giuong-boc-nem-lnd-14/
 [ninhouse.vn]
 match = -42.9%%
 title = Giá drap trải giường | Bộ chăn ga gối đệm ...
-url = https://ninhouse.vn/collections/drap?srsltid=AfmBOoryP-hL2-BNDG85KnK1DgRKu_jbfZIOFogx4RJTju4KDHPZEjb1
+url = https://ninhouse.vn/collections/drap
 
 [noithattamviet.net]
 match = -81.0%%
