--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-03 11:41:09
+lastsearch = 2024-08-03 12:43:57
 
 [www.diepxuan.com]
 match = 18.8%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOop-O8FXWzupFnwgNYiu24UpzF2qIDNsQqbc8bMqaZbYEx0kSsJI
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -200.0%%
-title = Why I’m OBSESSED with baking my lip liner #hudabeauty ...
-url = https://www.tiktok.com/@hudabeauty/video/7267971747742371118?lang=en
+match = -143.8%%
+title = Gloss for life #beautytok #hudabeauty #lip ...
+url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
 
 [archiveofourown.org]
 match = -137.5%%
