--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-03 10:07:13
+lastsearch = 2024-08-03 12:55:32
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -181.2%%
-title = Nhà nấm ngày bé mơ được ghé thăm #art #họcvẽcơbản ...
-url = https://www.tiktok.com/@tapvecungnhien/video/7223337440034032901
+match = -143.8%%
+title = #foryou #tiktoksalon #beautytok #hudabeauty ...
+url = https://www.tiktok.com/@hudabeauty/video/7278744176408235307
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -225,4 +225,14 @@ url = https://fkik433.com/shop/iipyowtm-75/
 match = -118.8%%
 title = tui warmdream 16 - TUI MAGIC LIFE Bodrum in Bodrum
 url = https://www.pmoq458.com/product/vljjrwrj-233/
+
+[fowm924.com]
+match = -143.8%%
+title = tui warmdream 15 - More related searches - fowm924.com
+url = https://fowm924.com/product/iipyowtm-75//
+
+[rltc309.com]
+match = -212.5%%
+title = tui warmdream 16 - Tui Magic Life Rixos Beldibi +16 - rltc309 ...
+url = https://rltc309.com/shop/vljjrwrj-233/
 
