--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-03 12:45:29
+lastsearch = 2024-08-03 13:24:17
 
 [everon.com.vn]
 match = 14.8%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22063
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = 3.4%%
-title = [Bảng Giá] Bộ Everon EPM24068
-url = https://everon.online/products/bo-everon-epm24068
+match = 18.9%%
+title = Bộ Chăn Ga Gối Everon SR04 Chính Hãng
+url = https://everon.online/products/bo-everon-sr04
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -23,8 +23,8 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-22069 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
+title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 
 [demxanh.com]
 match = 30.6%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 20.0%%
-title = BỘ CHĂN GA GỐI TRÀ MY KHOE HƯƠNG - EPM24063
-url = https://www.everonvni.vn/bo-chan-ga-goi-tra-my-khoe-huong-epm24063/
+match = 16.7%%
+title = BỘ CHĂN GA GỐI SẮC HẠ ESC23002
+url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/
 
 [everonhanquoc.vn]
 match = 19.4%%
