--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-03 10:54:51
+lastsearch = 2024-08-03 13:19:27
 
 [www.diepxuan.com]
-match = -72.7%%
-title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
+match = 4.5%%
+title = Bộ ga chun coco 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
 
 [shopee.vn]
-match = 13.6%%
-title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
-url = https://shopee.vn/product/494447407/24864025138
+match = -59.1%%
+title = Bộ ga gối nỉ nhung COCO nhập khẩu cao cấp, ga trải ...
+url = https://shopee.vn/Bộ-ga-gối-nỉ-nhung-COCO-nhập-khẩu-cao-cấp-ga-trải-giường-3-món-ga-chun-bọc-đệm-bền-màu-không-bai-dão-KT-1m6-1m8-2m2-i.224201185.14136884439
 
 [m.facebook.com]
 match = -18.2%%
