--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-03 10:16:56
+lastsearch = 2024-08-03 13:21:11
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -12,14 +12,14 @@ title = Chiếu lác
 url = https://www.diepxuan.com/chieu/chieu-lac.html?p=2
 
 [shopee.vn]
-match = -18.8%%
-title = Chiếu lác thiên nhiên : 1m6 .1m8
-url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
+match = 73.3%%
+title = Chiếu lác em bé
+url = https://shopee.vn/Chiếu-lác-em-bé-i.298458938.4550748407
 
 [www.youtube.com]
-match = -218.8%%
-title = tuyệt chiêu nối ống nước hai đầu cố định cực hay, cách sửa ...
-url = https://www.youtube.com/watch?v=DhNa7JeUr54
+match = -137.5%%
+title = "Mục sở thị" vườn cây cảnh bạc tỷ rộng 3 ha | VTC16
+url = https://www.youtube.com/watch?v=KBEvg9f6rxA
 
 [hawater.com.vn]
 match = -75.0%%
@@ -102,9 +102,9 @@ title = PG-1
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
-match = -193.8%%
-title = Video Land Rover Defender nâng gầm chèn qua dải phân ...
-url = https://tuoitre.vn/video-land-rover-defender-nang-gam-chen-qua-dai-phan-cach-khien-nguoi-xem-sung-20240802090420508.htm
+match = -200.0%%
+title = Amee ra album sau 2 năm vắng bóng, chuyện giải cứu là ...
+url = https://tuoitre.vn/amee-ra-album-sau-2-nam-vang-bong-chuyen-giai-cuu-la-chieu-tro-20240803113915411.htm
 
 [www.apple.com]
 match = 0.0%%
