--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-03 10:30:34
+lastsearch = 2024-08-03 13:20:10
 
 [www.bible.com]
-match = -157.1%%
-title = EZEKIELA 16 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/EZK.16.MIZOVBSI
+match = -128.6%%
+title = MARKA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -27,9 +27,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [manthutrang.com]
-match = -207.1%%
-title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
-url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
+match = -228.6%%
+title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
+url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
 
 [easydream.vn]
 match = -178.6%%
@@ -52,9 +52,9 @@ title = Màn chụp tự bung Gia Long 16x18x2cm - Loại 2 cửa
 url = https://boba.vn/man-chup-tu-bung-nguoi-lon/man-chup-tu-bung-gia-long-1-6-1-8x-2m-loai-2-cua
 
 [shopee.vn]
-match = -128.6%%
-title = màn chụp giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn chụp
+match = -185.7%%
+title = Màn Khung Không Khoan Tường GIA LONG Khung Inox ...
+url = https://shopee.vn/Màn-Khung-Không-Khoan-Tường-GIA-LONG-Khung-Inox-304-Phi-16-Màu-Xanh-Hồng-KT-1m4-1m6-1m8-2m-i.1120412717.24251331954
 
 [text.egwwritings.org]
 match = -78.6%%
