--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-03 12:54:51
+lastsearch = 2024-08-03 13:29:26
 
 [www.lazada.vn]
 match = -105.6%%
@@ -17,9 +17,9 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -133.3%%
-title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
+url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
 match = -105.6%%
@@ -37,9 +37,9 @@ title = 9X gói nem 10 cái đẹp như 10 nhờ mẹo cực hay, trữ đông .
 url = https://eva.vn/bep-eva/9x-goi-nem-10-cai-dep-nhu-10-nho-meo-cuc-hay-tru-dong-nem-de-lau-van-ngon-c162a501885.html
 
 [www.tiktok.com]
-match = -188.9%%
-title = let me cater to you with these easy nem nuong spring rolls ...
-url = https://www.tiktok.com/@marylantran/video/7303621361979755822?lang=en
+match = 0.0%%
+title = Thomson Airfryer
+url = https://www.tiktok.com/discover/thomson-airfryer
 
 [www.youtube.com]
 match = -144.4%%
@@ -53,13 +53,13 @@ url = https://www.kymdan.com/
 
 [www.instagram.com]
 match = -144.4%%
-title = Khoai Bao | 𝐍𝐄𝐌 𝐆𝐀̀ 𝐗𝐀́ 𝐗𝐈́𝐔 𝐏𝐇𝐎𝐌𝐀𝐈 thịt đùi gà tươi ...
-url = https://www.instagram.com/p/C9J_rkypR10/
+title = Thùy Ngân (@huuloc861) • Instagram photos and videos
+url = https://www.instagram.com/huuloc861/
 
 [www.diepxuan.com]
-match = -111.1%%
-title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
+match = 11.1%%
+title = Điệp Xuân Nệm siêu nhẹ
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [nemphuoclong.vn]
 match = -83.3%%
