--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-03 01:56:51
+lastsearch = 2024-08-03 13:22:33
 
 [xoptraisan.info]
-match = 17.6%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -64.7%%
+title = Thảm nỉ đế cao su không răng Âu Lạc 50×50
+url = https://xoptraisan.info/tham-ni-50x50-au-lac-de-cao-su
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,14 +17,14 @@ title = thảm nỉ xốp gỗ 60
 url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 
 [thamaulac.com.vn]
-match = -41.2%%
-title = Lưu trữ 60x60cm – THẢM XỐP ÂU LẠC
-url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep/60x60cm
+match = -29.4%%
+title = Thảm nỉ ghép 60x60cm Kẻ đỏ, kẻ ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-ke-do-ghi
 
 [vatlieulotsan.com]
-match = -76.5%%
-title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
-url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
+match = -100.0%%
+title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
+url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [lombom.com]
 match = -158.8%%
@@ -187,9 +187,9 @@ title = Lhagang Choyu Wordlist with the Thamkhas Dialect of ...
 url = https://core.ac.uk/download/pdf/154886317.pdf
 
 [m.facebook.com]
-match = -158.8%%
-title = THẢM XỐP TRẢI SÀN - Thảm xốp nỉ kẻ Âu Lạc bịch 10 tấm ...
-url = https://m.facebook.com/xoplotsan/photos/thảm-xốp-nỉ-kẻ-âu-lạc-bịch-10-tấm-mỗi-tấm-kích-thước-60-x-60cm-khoản/724213377684173/
+match = -135.3%%
+title = THẢM XỐP TRẢI SÀN - Xốp tranh giao thông Tường Lâm ...
+url = https://m.facebook.com/xoplotsan/photos/xốp-tranh-giao-thông-tường-lâm-bịch-8-tấm-ghép-thành-2-hình-như-trên-mỗi/724213227684188/
 
 [citydocs.cityoforange.org]
 match = -194.1%%
