CI images update

--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -77,9 +77,9 @@ title = Ga Gối Xoa Nhung XN16 1m6 x 2m
 url = https://demgiare.vn/ga-goi-xoa-nhung-xn16-1m6-x-2m.html
 
 [www.sendo.vn]
-match = 9.5%%
-title = BỘ GA GỐI SATIN XOA CAO CẤP - CB307
-url = https://www.sendo.vn/bo-ga-goi-satin-xoa-cao-cap-21304614.html
+match = -100.0%%
+title = Bộ Ga Gối Chun Siêu Sang, Giá Khuyến Mãi, Tiết Kiệm Tối ...
+url = https://www.sendo.vn/bo-ga-goi-chun.htm
 
 [www.lazada.vn]
 match = -61.9%%
