--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-08-03 11:58:51
+lastsearch = 2024-08-03 13:46:44
 
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOooRss8md8oJvHEnod70YKnF-miDMaCwjdKns3q7xJ2ApXa6z1Zd
 
 [noithatdaithanh.vn]
 match = -47.6%%
