--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-03 11:51:27
+lastsearch = 2024-08-03 13:39:28
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -18,8 +18,8 @@ url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
 match = -187.5%%
-title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
+title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
+url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -835,4 +835,9 @@ url = https://tiengchuong.chinhphu.vn/nhung-dieu-can-biet-ve-thuoc-lac-11351.htm
 match = -62.5%%
 title = VTVcab - Truyền hình Cáp Việt Nam
 url = https://dichvu.vtvcab.vn/
+
+[nld.com.vn]
+match = -62.5%%
+title = Mất 8 cây vàng vì chiêu lừa đơn giản
+url = https://nld.com.vn/podcast/mat-8-cay-vang-vi-chieu-lua-don-gian-196240803115233708.htm
 
