--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-03 10:24:17
+lastsearch = 2024-08-03 13:49:48
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -185.7%%
-title = HƯỚNG DẪN CÁCH PHỤC HỒI THẺ XANH SAU KHIỞ VIỆT ...
-url = https://www.youtube.com/watch?v=3ycihnhaARo
+match = -271.4%%
+title = 10 (1979) Movie Trailer - Dudley Moore, Bo Derek, Julie ...
+url = https://www.youtube.com/watch?v=au0Pp_9oQbo
 
 [www.reddit.com]
 match = -64.3%%
