--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -107,8 +107,8 @@ title = Micro mai rùa đa hướng Shure MX393/S
 url = https://tca.vn/micro-mai-rua-da-huong-shure-mx393-s/
 
 [trungtamthuocdantoc.com]
-match = -175.0%%
-title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị ...
+match = -187.5%%
+title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị Thuốc
 url = https://trungtamthuocdantoc.com/duoc-lieu/mai-rua
 
 [medcare.com.vn]
