--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-03 12:57:06
+lastsearch = 2024-08-03 13:38:26
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,11 +54,11 @@ url = https://en.wikipedia.org/wiki/Vietnamese_language
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrYe7N2L&sig=ACfU3U0Y5DU78BBZyAbOoFQD94CCV2Psgw&hl=en&sa=X&ved=2ahUKEwj60sf7hNiHAxUgv4kEHblUI-UQ6AF6BAgnEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrYedNXN&sig=ACfU3U2sX2qRNqHyzwi_FX5WhtOcUSqBTg&hl=en&sa=X&ved=2ahUKEwjKze-Hm9iHAxVCI0QIHbxrEmAQ6AF6BAgnEAM
 
 [www.travelweekly.com]
-match = -56.5%%
-title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda
+match = -87.0%%
+title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda- Page 10
 url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-Jade-Emperor-Pagoda-p4247472?s=2+u3NLAzhVE=u&pg=10
 
 [sonoivu.thaibinh.gov.vn]
