--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-03 11:37:20
+lastsearch = 2024-08-03 13:39:09
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -46.7%%
-title = Đèn mắt ếch chiếu điểm HT 8094 10W
-url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
+match = -13.3%%
+title = Đèn chiếu điểm HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
 match = -146.7%%
@@ -93,8 +93,8 @@ url = https://m.facebook.com/groups/648618483681727/posts/852387779971462/
 
 [www.diepxuan.com]
 match = -13.3%%
-title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
+title = Chiếu cây HT 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [huongtruc.com]
 match = -213.3%%
