--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-03 11:45:27
+lastsearch = 2024-08-03 13:34:59
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Giữ nghề dệt chiếu Long Cang
 url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -206.2%%
-title = Mô hình nuôi gà vi sinh: Thịt thơm ngon, gà sạch bệnh | VTC16
-url = https://www.youtube.com/watch?v=U8FJ7FRihYQ
+match = -175.0%%
+title = Dây thìa canh - THẦN DƯỢC cho người tiểu đường | VTC16
+url = https://www.youtube.com/watch?v=yNsnwRBCw_k
 
 [books.google.com]
 match = -250.0%%
@@ -202,9 +202,9 @@ title = TP. HCM: Các phái đoàn viếng tang Hòa thượng Thích ...
 url = https://phatsuonline.vn/tp-hcm-cac-phai-doan-vieng-tang-hoa-thuong-thich-hue-tri-sang-ngay-21-7-25
 
 [www.facebook.com]
-match = -231.2%%
-title = Tổng Bí thư Nguyễn Phú Trọng đã trút hơi thở cuối cùng tại ...
-url = https://www.facebook.com/vtc1tintuc/videos/tổng-bí-thư-nguyễn-phú-trọng-đã-trút-hơi-thở-cuối-cùng-tại-bệnh-viện-trung-ương-/782090644138956/
+match = -112.5%%
+title = Review Quy Nhơn | 𝑇𝑟𝑜𝑛𝑔 𝑏𝑢𝑜̂̉𝑖 𝑐ℎ𝑖𝑒̂̀𝑢 𝑙𝑎̣𝑐 𝑙𝑜̃𝑛𝑔
+url = https://www.facebook.com/groups/ReviewQuyNhonHomestayKhachSanTourdulich/posts/𝑇𝑟𝑜𝑛𝑔-𝑏𝑢𝑜̂̉𝑖-𝑐ℎ𝑖𝑒̂̀𝑢-𝑙𝑎̣𝑐-𝑙𝑜̃𝑛𝑔-đ𝑜̂𝑖-𝑣𝑎𝑖-𝑔𝑎̂̀𝑦-𝑐ℎ𝑎̆̉𝑛𝑔-𝑐𝑜̃𝑛𝑔-𝑛𝑜̂̉𝑖-𝑏𝑎𝑜-𝑏𝑖́-𝑚𝑎̣̂𝑡/1453965548630377/
 
 [www.yenbai.gov.vn]
 match = -193.8%%
