--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-03 10:24:39
+lastsearch = 2024-08-03 13:46:22
 
 [www.zillow.com]
 match = -69.2%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOooiIfom8sMGE29aLgXNIeyxD_t81vDO01_SdSP7Tfo3vBSRaR9L
+url = https://www.lazada.vn/tag/ga-ni-long/
 
 [www.njcaa.org]
 match = -140.0%%
