--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-03 04:47:15
+lastsearch = 2024-08-03 13:42:35
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường cao su non màu xanh ngọc
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -27,9 +27,9 @@ title = Ga trải giường chống thấm 160x200 - 131
 url = https://www.sendo.vn/ga-trai-giuong-chong-tham-160x200-17225304.html
 
 [tiki.vn]
-match = -72.7%%
-title = Mua Ga trải giường có chống thấm nhiều màu trơn - 160x200
-url = https://tiki.vn/ga-trai-giuong-co-chong-tham-nhieu-mau-tron-p107409030.html?spid=176507764/
+match = -36.4%%
+title = Thảm trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải giường
 
 [decoviet.vn]
 match = 22.2%%
@@ -37,9 +37,9 @@ title = Thảm Sofa Biên Hòa
 url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [www.thamvintage.vn]
-match = -25.0%%
-title = Thảm Vintage
-url = https://www.thamvintage.vn/
+match = 12.5%%
+title = Thảm chân giường
+url = https://www.thamvintage.vn/collections/tham-chan-giuong
 
 [cafeland.vn]
 match = -72.7%%
