CI images update

--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-03 09:42:07
+lastsearch = 2024-08-03 14:11:14
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOop9KXwbPe4Kkejidja_4DTuvNH50MAnzEfG1dA1kiDdouTV9uJy
 
 [shopee.vn]
 match = -6.7%%
