--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-03 11:46:46
+lastsearch = 2024-08-03 14:24:34
 
 [chanrathanhthuy.com]
 match = 9.7%%
@@ -12,14 +12,14 @@ title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
 url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
 
 [demxanh.com]
-match = 25.8%%
-title = Bộ chăn ga gối lụa Singapore luxury 7 món L7M18
-url = https://demxanh.com/bo-chan-ga-goi-lua-singapore-luxury-7-mon-l7m18.html
+match = 58.1%%
+title = Bộ chăn ga gối Hanvico LIVING - LV18
+url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
 
 [songhongonline.vn]
-match = 8.7%%
-title = Bộ sản phẩm SH_BC22 057
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
+match = 50.0%%
+title = Bộ chăn ga gối SH_UT23 032
+url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-027
 
 [changagoidemsonghong.com]
 match = -29.0%%
