--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-03 10:59:17
+lastsearch = 2024-08-03 14:23:54
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
 url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [songhong.info]
-match = -20.8%%
-title = Chăn ga gối Basic 100%% cotton mã mầu BC22-058
-url = https://songhong.info/chan-ga-goi-bc58
+match = -16.7%%
+title = Mẫu chăn ga gối 100%% cotton mã mầu BC22-067
+url = https://songhong.info/chan-ga-goi-bc67
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -33.3%%
-title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22004
-url = https://www.everonvn.vn/chi-tiet/everon-esm22004.html
+match = -87.5%%
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
