--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-03 08:04:04
+lastsearch = 2024-08-03 14:14:39
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = -14.3%%
-title = TUYỂN DỤNG SPA | 💝CENT BEAUTY TUYỂN NHÂN VIÊN
-url = https://m.facebook.com/groups/1239917846206149/posts/2469211189943469/
+match = -71.4%%
+title = Việc làm spa uy tín ✅ | 👉500k,600k700k....../1lít serum ...
+url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
 
 [www.dkn.tv]
 match = -21.4%%
