--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-08-03 06:26:06
+lastsearch = 2024-08-03 14:18:47
 
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOorL-jUYMrY2H0ukj05LRrnlKcFeG7chrxk1hsrLF4UhCEHp0qLr
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [entershopping.vn]
 match = 3.4%%
@@ -32,9 +32,9 @@ title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
 url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 
 [thegioidemonline.com]
-match = 34.5%%
-title = Chiếu điều hòa cao su non Tencel Xanh nhạt
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOooMqy-ZEq7uQI9kAhJ2atL7U-Vvc7I6posKhw_aVeFNVBUwlAZS
+match = 37.9%%
+title = Chiếu điều hòa cao su non Tencel cam đất
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-cam-dat.html
 
 [khodem.vn]
 match = 55.2%%
