--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-03 11:56:18
+lastsearch = 2024-08-03 14:15:19
 
 [www.everonvn.vn]
 match = -22.6%%
@@ -120,4 +120,9 @@ url = https://changagoidemdep.vn/dem-bong-ep-everon-extrafoam.html
 match = -29.0%%
 title = Chăn ga gối đệm Everon chính hãng, khuyến mại 10 - 30%%
 url = https://everonkorea.com/
+
+[demluxury.com.vn]
+match = 6.5%%
+title = Đệm bông ép EXTRAFOAM 9 vùng Everon
+url = https://demluxury.com.vn/san-pham/dem-bong-ep-extrafoam-everon/
 
