--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-03 13:29:26
+lastsearch = 2024-08-03 14:26:37
 
 [www.lazada.vn]
 match = -105.6%%
@@ -17,9 +17,9 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -133.3%%
+title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [thegioinem.com]
 match = -105.6%%
@@ -59,7 +59,7 @@ url = https://www.instagram.com/huuloc861/
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOopRXzdmNG4T2hRcqKZZWloV4_Kw5dr3M5OTsE28526OzOGb-3Wx
 
 [nemphuoclong.vn]
 match = -83.3%%
@@ -210,4 +210,9 @@ url = https://demxanh.com/nem-cho-nguoi-dau-lung.html
 match = -38.9%%
 title = Ruột chăn Everon Micro siêu nhẹ
 url = https://www.everonvn.vn/chi-tiet/ruot-chan-everon-micro.html
+
+[twitter.com]
+match = -38.9%%
+title = Nem N' Nem (@NemnNemtrailer) / ...
+url = https://twitter.com/nemnnemtrailer
 
