--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-08-03 11:29:00
+lastsearch = 2024-08-03 14:18:03
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Ruột gối đơn siêu nhẹ Sông Hồng Collection chính hãng!
 url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 
 [demxanh.com]
-match = -44.0%%
-title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
-url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
+match = -64.0%%
+title = Đệm Xanh-Chuỗi Cửa Hàng Bán Chăn Ga Gối Đệm hàng đầu
+url = https://demxanh.com/
 
 [khodem.vn]
 match = 8.0%%
@@ -102,9 +102,9 @@ title = Prank Call FAILED❌ ..Ka aw an hre veka apawi lutuk🤦🏻‍ ...
 url = https://www.youtube.com/watch?v=UAeUMbZk_K8
 
 [changagoidemeverhome.com]
-match = 8.0%%
-title = Ruột gối đơn Everhome chất lượng cao Bedding!
-url = https://changagoidemeverhome.com/ruot-goi-don-everhome/
+match = 68.0%%
+title = Ruột gối ôm Everhome Bedding!
+url = https://changagoidemeverhome.com/ruot-goi-om-everhome/
 
 [demeverhome.com]
 match = 63.2%%
