--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-03 12:57:27
+lastsearch = 2024-08-03 14:27:40
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -57,9 +57,9 @@ title = Bảng giá vỏ gối, ruột gối Sông Hồng mới nhất 2021
 url = https://songhonghanoi.vn/bang-gia-vo-goi-ruot-goi-song-hong-moi-nhat-2021.html
 
 [jysk.vn]
-match = -192.9%%
-title = Ruột Gối Nằm, Ruột Gối Ôm Polyester Cao Cấp - JYSK.vn
-url = https://jysk.vn/ruot-goi-polyester
+match = -164.3%%
+title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/ruot-chan-goi
 
 [everonvn.com.vn]
 match = -164.3%%
