CI images update

--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-03 11:54:13
+lastsearch = 2024-08-03 14:28:03
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -120,4 +120,9 @@ url = https://thegioidemonline.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-c
 match = -19.0%%
 title = Bộ Chăn Ga Gối Satin Cotton Màu Burgundy
 url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-burgundy
+
+[demgiare.vn]
+match = 14.3%%
+title = Ga Gối Xoa Nhung XN14 1m6 x 2m
+url = https://demgiare.vn/ga-goi-xoa-nhung-xn14-1m6-x-2m.html
 
