--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-08-03 02:32:46
+lastsearch = 2024-08-03 14:36:56
 
 [www.youtube.com]
 match = -52.0%%
@@ -427,9 +427,9 @@ title = https://m.sabomall.com/sitemap/category/phukiencongnghe/3
 url = https://sabomall.com/sitemap/category/phukiencongnghe/3
 
 [thanhnien.vn]
-match = -64.0%%
-title = Đài Loan: tin tức, hình ảnh, video, bình luận mới nhất
-url = https://thanhnien.vn/dai-loan-tags491767.html
+match = -44.0%%
+title = Đài Loan: tin tức, hình ảnh, video, bình luận
+url = https://thanhnien.vn/dai-loan.html
 
 [travel.com.vn]
 match = -68.0%%
