--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -22,8 +22,8 @@ title = Bộ Chăn Ga Gối 5 Món BRANIO 180 x 200 cm
 url = https://shopee.vn/search?keyword=Bộ Chăn Ga Gối 5 Món BRANIO 180 x 200 cm
 
 [congtynemthangloi.com]
-match = -52.0%%
-title = Review TOP ga giường Thắng Lợi được yêu thích nhất ...
+match = -72.0%%
+title = Review TOP ga giường Thắng Lợi được yêu thích nhất hiện nay
 url = https://congtynemthangloi.com/review-ga-giuong-thang-loi
 
 [nemtotgiare.com]
