--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-03 12:42:22
+lastsearch = 2024-08-03 14:33:12
 
 [burningman.org]
 match = 0.0%%
@@ -194,7 +194,7 @@ url = https://max.adobe.com/
 [www.uniqlo.com]
 match = -233.3%%
 title = Women's, Men's and Kids' Clothing & Accessories | UNIQLO US
-url = https://www.uniqlo.com/us/en/?srsltid=AfmBOop5vFBVhPDwk5wcU-OX9UmNjosB56o2T_fd9gD9mNEmFkv0jEYq
+url = https://www.uniqlo.com/us/en/
 
 [facebookuserprivacysettlement.com]
 match = -100.0%%
