--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-03 13:35:20
+lastsearch = 2024-08-03 14:30:06
 
 [silverwow.net]
 match = -255.6%%
@@ -62,9 +62,9 @@ title = Mikawaya Edomae Toro-chan 6.6 lbs (3 kg) (500 g) x 6 Packs ...
 url = https://www.amazon.co.jp/-/en/Mikawaya-Edomae-Toro-chan-Packs-Frozen/dp/B01APABNVO
 
 [unistrutohio.com]
-match = -466.7%%
-title = Unistrut P1001 - 1-5/8" x 3-1/4", 12 Gauge Back-to- ...
-url = https://unistrutohio.com/products/p1001
+match = -544.4%%
+title = Unistrut P1000T - 1-5/8" x 1-5/8", 12 Gauge, Metal Framing ...
+url = https://unistrutohio.com/products/p1000t
 
 [scholar.google.co.uk]
 match = 0.0%%
@@ -339,7 +339,7 @@ url = https://icecartel.com/blogs/news/gold-chain-weight
 [johnnydangandco.com]
 match = -288.9%%
 title = Silver 10mm Solid Cuban Chain 20" 22" 24"
-url = https://johnnydangandco.com/products/silver-10mm-solid-cuban-chain-20-22-24?srsltid=AfmBOorV44I9hiBfx0fG0i6vkRcOIuH5HMpVWuW3ylvOfpeOmH9vJ9of
+url = https://johnnydangandco.com/products/silver-10mm-solid-cuban-chain-20-22-24
 
 [www.hsph.harvard.edu]
 match = -344.4%%
