--- a/images/tui-warmdream-150x190x09/config.ini
+++ b/images/tui-warmdream-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-150x190x09.html
 lastopen = 2024-06-17 10:46:30
 
 [search]
-lastsearch = 2024-08-03 07:59:55
+lastsearch = 2024-08-03 14:29:25
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOop4W0E56aCcOGKKUb-6fCkkpByBfrluAkeQeXic5Ps5qXel1S6m
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.roadtripamerica.com]
 match = -75.0%%
