CI images update

--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-03 11:43:26
+lastsearch = 2024-08-03 14:59:03
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -307,9 +307,9 @@ title = Quận 2- khu dân cư D2 Eight ( Capital land)
 url = https://diaoc24gio.com/du-an/quan-2-khu-dan-cu-d2-eight-capital-land
 
 [concung.com]
-match = -213.3%%
-title = Xe scooter 3 bánh ELSA DCA82009-Q | Xe lắc, xe chòi chân
-url = https://concung.com/xe-lac-xe-choi-chan/xe-scooter-3-banh-elsa-dca82009-q-46640.html
+match = -220.0%%
+title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
+url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
 
 [tuyensinh247.com]
 match = -220.0%%
@@ -435,4 +435,9 @@ url = https://www.sacombank.com.vn/trang-chu/danh-sach-atm-dgd.html
 match = -213.3%%
 title = 13 điểm mới của Luật trật tự an toàn giao thông đường bộ
 url = https://baobacgiang.vn/13-diem-moi-cua-luat-trat-tu-an-toan-giao-thong-duong-bo-103308.bbg
+
+[xoilaczvu.tv]
+match = -226.7%%
+title = Trực tiếp Magic United TFA vs North Lakes vào lúc 14:00 ...
+url = https://xoilaczvu.tv/truc-tiep/magic-united-tfa-vs-north-lakes-luc-1400-ngay-03-08-2024/
 
