--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-03 05:31:26
+lastsearch = 2024-08-03 14:58:01
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = Bộ Everon Ep1831 - Curtis
 url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -161.1%%
-title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+match = -133.3%%
+title = [FREESHIP MAX] Vỏ gối ôm satin cao cấp [Bear Bedding]
+url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html
 
 [www.reddit.com]
 match = -150.0%%
@@ -37,9 +37,9 @@ title = Vỏ gối EPM20065 45x65 - Điệp Xuân
 url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 
 [www.everonqb.com]
-match = -100.0%%
-title = Vỏ gối EPCWAVE 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epcwave-45x65.html
+match = -111.1%%
+title = Vỏ gối ESM20013 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-esm20013-45x65.html
 
 [shopee.vn]
 match = -127.8%%
@@ -65,4 +65,9 @@ url = https://www.archerytalk.com/threads/specs-for-an-old-bear-polar-recurve.22
 match = -188.9%%
 title = VintageDeco Bears | Winnie, 17.5 /6.8 inch big, filled with ...
 url = https://www.instagram.com/vdbears/p/C17lcL4okSP/
+
+[tiki.vn]
+match = -88.9%%
+title = Bộ chăn ga gối hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bộ chăn ga gối
 
