--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-03 14:28:03
+lastsearch = 2024-08-03 14:48:07
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV25
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv25/
+title = Bộ ga chun LIVING - LV51
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv51/
 
 [www.diepxuan.com]
-match = -4.8%%
-title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
+match = -14.3%%
+title = Bộ chăn ga gối màu xoa tin 14 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
 
 [lasantevn.com]
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -95.2%%
-title = Bộ chăn ga gối Sông Hồng chính hãng 100%% cotton mã BC21 ...
-url = https://changagoidemsonghong.com/chan-ga-goi-bc29
+match = -28.6%%
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-066
+url = https://changagoidemsonghong.com/chan-ga-goi-bc66
 
 [songhong.info]
 match = -19.0%%
