--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-03 12:37:15
+lastsearch = 2024-08-03 14:56:18
 
 [www.muji.com]
 match = 7.1%%
@@ -185,4 +185,9 @@ url = https://mujiaustralia.com/pages/about-muji
 match = 14.3%%
 title = Kinokuniya USA
 url = https://usa.kinokuniya.com/
+
+[hotel.muji.com]
+match = 7.1%%
+title = MUJI HOTEL BEIJING
+url = https://hotel.muji.com/beijing/en/
 
