--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-03 14:18:24
+lastsearch = 2024-08-03 14:52:34
 
 [shopee.vn]
 match = -43.5%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOoq0yIVR06oJ2nRvwvd7IM5Ryfir2mDOBeBwkdwxZFHWUYoz5jn0
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
 
 [chuyenhangviet.com]
 match = -43.5%%
@@ -32,9 +32,9 @@ title = Xưởng chiếu cây cao bằng | By Cơ sở SX chiếu Tre Việt ...
 url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=watchlist&__rv__=video_home_www_playlist_video_list&locale=cs_CZ
 
 [chieutrucsaigon.com]
-match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = 21.7%%
+title = CHIẾU CAO BẰNG NẰM CÓ TỐT KHÔNG?
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-cao-bang-nam-co-tot-khong-100.html
 
 [demxanh.com]
 match = -21.7%%
