--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-03 14:14:39
+lastsearch = 2024-08-03 14:52:15
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -27,8 +27,8 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = -71.4%%
-title = Việc làm spa uy tín ✅ | 👉500k,600k700k....../1lít serum ...
+match = 17.9%%
+title = Việc làm spa uy tín - Facebook
 url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
 
 [www.dkn.tv]
@@ -320,4 +320,9 @@ url = https://quizlet.com/vn/820708208/vang-da-tang-bilirubin-sgk-flash-cards/
 match = 10.7%%
 title = Cái tên nào thống trị rạp Việt tháng 8?
 url = https://baoquangninh.vn/cai-ten-nao-thong-tri-rap-viet-thang-8-3311600.html
+
+[www.ansinh.com.vn]
+match = -53.3%%
+title = Kiến thức y học
+url = http://www.ansinh.com.vn/News.aspx?NewsID=2107&CatID=68&TypeID=2
 
