--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-03 11:58:08
+lastsearch = 2024-08-03 14:51:10
 
 [www.youtube.com]
 match = -89.5%%
@@ -349,7 +349,7 @@ url = https://dentrongcaylgl.com/nhung-dieu-thu-vi-ve-cay-moc-huong
 [www.lazada.vn]
 match = -100.0%%
 title = Set 3 Cây hoa mộc, mộc hương ta hoa trắng thơm lâu
-url = https://www.lazada.vn/products/set-3-cay-hoa-moc-moc-huong-ta-hoa-trang-thom-lau-i1734591241.html?srsltid=AfmBOoqWBJFnCXVijFtngG1NdANNXGAgFqm5v-7qdIjyRXY-tmUpG9PU
+url = https://www.lazada.vn/products/set-3-cay-hoa-moc-moc-huong-ta-hoa-trang-thom-lau-i1734591241.html
 
 [caycanhnoithat.net]
 match = -142.1%%
