--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-03 13:21:32
+lastsearch = 2024-08-03 14:52:55
 
 [shopee.vn]
 match = 25.0%%
-title = Chiếu Lác Trắng Xếp Gọn
-url = https://shopee.vn/Chiếu-Lác-Trắng-Xếp-Gọn-i.58697470.8505363108
+title = Chiếu lác màu xuất khấu
+url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
 
 [chieulongdinh.com.vn]
 match = -162.5%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -67,9 +67,9 @@ title = Kỹ Thuật Trồng Lạc (Đậu Phộng) Vụ Xuân
 url = https://sonnptnt.thaibinh.gov.vn/tin-tuc-su-kien/tu-sach-nha-nong/ky-thuat-trong-lac-dau-phong-vu-xuan.html
 
 [www.youtube.com]
-match = -187.5%%
-title = 12 Động Tác Xoa Mặt - Diện Chẩn Bùi Quốc Châu | G.V ...
-url = https://www.youtube.com/watch?v=1qymgQonDEU
+match = -225.0%%
+title = Thảm họa sập cầu ở Trung Quốc: 38 người tử nạn dưới dòng ...
+url = https://www.youtube.com/watch?v=3J9ucIlMaxQ
 
 [vuihoc.vn]
 match = -187.5%%
@@ -350,4 +350,9 @@ url = https://baocaovien.vn/tin-tuc/boc-tham-vong-1-v-league-2024-2025-hai-phong
 match = -168.8%%
 title = Quảng Ninh sắp cho ra mắt câu lạc bộ (CLB) bóng đá nam
 url = https://www.qdnd.vn/the-thao/trong-nuoc/binh-luan-moi-cay-moi-hoa-787996
+
+[baonghean.vn]
+match = -175.0%%
+title = Thủ môn người Nghệ An được Hồng Lĩnh Hà Tĩnh chiêu mộ
+url = https://baonghean.vn/thu-mon-nguoi-nghe-an-duoc-hong-linh-ha-tinh-chieu-mo-10277545.html
 
