--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-03 13:46:22
+lastsearch = 2024-08-03 14:53:16
 
 [www.zillow.com]
 match = -69.2%%
@@ -107,9 +107,9 @@ title = Regal Hollywood @ North I-85 Movie Tickets and ...
 url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
 
 [www.facebook.com]
-match = -69.2%%
-title = Senoia Police Department, GA
-url = https://www.facebook.com/senoiapolice/
+match = -192.3%%
+title = Spalding County Sheriff's Office | Griffin GA
+url = https://www.facebook.com/spaldingsheriff/
 
 [www.bpas.org]
 match = -184.6%%
