--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-08-03 11:32:07
+lastsearch = 2024-08-03 14:45:18
 
 [www.everonvn.vn]
 match = 31.1%%
@@ -17,9 +17,9 @@ title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
 url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [demxanh.com]
-match = 27.9%%
-title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
+match = 29.8%%
+title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -37,9 +37,9 @@ title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27 - Điệp Xuân
 url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
-match = 45.7%%
-title = Nệm lò xo Everon Bonnell 160x200x23
-url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-160x200x23.html
+match = 57.4%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everonvn.com.vn]
 match = 19.1%%
