CI images update

--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-08-03 11:45:06
+lastsearch = 2024-08-03 15:20:57
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoqS5Vomuw59929DxnEadWdzLUlMSemAV-Wte1dSNROEcit8ajlW
 
 [shopee.vn]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hoà
 [demviethome.vn]
 match = 14.8%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOoqPdQ8h0SIPobUH8w8XOXs1aaZ-19T9o_LQOCIXq2cUB58r6aqq
 
 [lybalansieucute.com]
 match = 37.0%%
@@ -49,7 +49,7 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 [foreverbedding.net]
 match = 0.0%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOooFF_CAbSCW3f6HyFe3VNjDYLOkJI1sXiVB3X6aM8NHyNBcBoeW
 
 [mandep.vn]
 match = 37.0%%
