--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-03 13:25:37
+lastsearch = 2024-08-03 15:24:36
 
 [www.instagram.com]
 match = -238.5%%
@@ -47,9 +47,9 @@ title =
 url = https://www.behindthename.com/name/yuki01chan/submitted
 
 [hk.linkedin.com]
-match = -223.1%%
-title = Chan Hoi Ching - Hong Kong SAR | Professional Profile
-url = https://hk.linkedin.com/in/chan-hoi-ching-381002b7
+match = -107.7%%
+title = Yuki Chan - Hong Kong, Hong Kong SAR
+url = https://hk.linkedin.com/in/yuki-y-chan?trk=public_profile_samename-profile
 
 [www.eduhk.hk]
 match = -200.0%%
@@ -62,9 +62,9 @@ title = Centre for Learning Enhancement And Research :: About
 url = https://www.cuhk.edu.hk/clear/about/people.html
 
 [en.wikipedia.org]
-match = -61.5%%
-title = Ichigeki Sacchu!! HoiHoi-san
-url = https://en.wikipedia.org/wiki/Ichigeki_Sacchu!!_HoiHoi-san
+match = -333.3%%
+title = 3X1
+url = https://en.wikipedia.org/wiki/3X1
 
 [nursing.hku.hk]
 match = -161.5%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -300.0%%
-title = Hoi Chan Translates Everyday Experiences into ... - Colossal
+match = -215.4%%
+title = Hoi Chan Translates Everyday Experiences into ...
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
