--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-03 14:31:07
+lastsearch = 2024-08-03 15:24:57
 
 [demxanh.com]
 match = 40.7%%
@@ -12,9 +12,9 @@ title = Chiếu điều hòa mây viền lụa loại đẹp
 url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = 0.0%%
+title = chiếu điều hoà giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [goni.vn]
 match = 18.5%%
