--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-03 10:49:03
+lastsearch = 2024-08-03 15:30:44
 
 [dongagroup.vn]
 match = -272.7%%
@@ -69,7 +69,7 @@ url = https://shopee.vn/list/giường/1m2
 [3dwarehouse.sketchup.com]
 match = -136.4%%
 title = GIUONG MAN - 3D Warehouse - SketchUp
-url = https://3dwarehouse.sketchup.com/model/eba5b527-24ac-4932-9b5f-e745fe84fe9b/GIUONG-MAN
+url = https://3dwarehouse.sketchup.com/model/eba5b527-24ac-4932-9b5f-e745fe84fe9b/GIUONG-MAN?hl=hu
 
 [www.ducloi.vn]
 match = -172.7%%
@@ -92,9 +92,9 @@ title = Giường 2mx2m2 hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
-match = -272.7%%
-title = Giường & khung giường cỡ lớn gần Mankato, Minnesota
-url = https://www.facebook.com/marketplace/mankato/king-bed-frames/?locale=vi_VN
+match = -200.0%%
+title = Có bán Ga giường tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/bed-sheets/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -192,9 +192,9 @@ title = Happy Deals - Happy Day 2 | RUNNNN Giường kèm ...
 url = https://m.facebook.com/groups/3252180871727606/posts/3866095360336151/
 
 [www.booking.com]
-match = -227.3%%
-title = Country Inn & Suites by Radisson, Eagan, MN
-url = https://www.booking.com/hotel/us/country-inn-suites-eagan.vi.html
+match = -290.9%%
+title = Country Inn & Suites by Radisson, Albertville, MN
+url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
 
 [chankyhotel.com]
 match = -172.7%%
