--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-08-03 11:16:08
+lastsearch = 2024-08-03 15:31:05
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q2.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -165.0%%
-title = Use of Polymeric Nanoparticle Platform Targeting the Liver ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6506187/
+match = -130.0%%
+title = Uncoupling Proteins: Role in Insulin Resistance and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
 
 [www.energy.gov]
 match = -95.0%%
@@ -172,9 +172,9 @@ title = EPA's Reanalysis of Key Issues Related to Dioxin Toxicity and ...
 url = https://cfpub.epa.gov/ncea/iris/iris_documents/documents/supdocs/dioxinv1sup.pdf
 
 [cps-vo.org]
-match = -140.0%%
-title = Registrants | Cyber-Physical Systems Virtual Organization
-url = https://cps-vo.org/group/satc-pimtg22/registrants
+match = -150.0%%
+title = *** 276 Total Attendees (listed in green) *** | Cyber- ...
+url = https://cps-vo.org/group/cpspimtg24/registrants-attendees
 
 [backend.daikincomfort.com]
 match = -28.6%%
@@ -430,4 +430,9 @@ url = https://www.cirm.ca.gov/wp-content/uploads/archive/files/about_cirm/Outsid
 match = -155.0%%
 title = An Insider's Guide to How US University Finances Really Work
 url = https://facultycouncil.colostate.edu/wp-content/uploads/sites/29/2024/04/Comrie-Like-Nobodys-Business.pdf
+
+[www.kslegislature.gov]
+match = -15.0%%
+title = Pittsburg State University
+url = https://www.kslegislature.gov/li_2020/b2019_20/committees/ctte_jt_bldg_constr_1/documents/testimony/20201214_68.pdf
 
