--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -22,9 +22,9 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = 10.7%%
-title = Chiếu trúc Hạt Quế lâm- chuẩn việt nam 1m5 đến 2m
-url = https://shopee.vn/Chiếu-trúc-Hạt-Quế-lâm-chuẩn-việt-nam-1m5-đến-2m-i.251185875.3635886770
+match = 42.9%%
+title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
 
 [demxanh.com]
 match = -25.0%%
