--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-03 12:00:34
+lastsearch = 2024-08-03 15:33:02
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -309.1%%
-title = Có bán Tủ đầu giường bằng gỗ tại Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/wood-nightstands/?locale=vi_VN
+match = -290.9%%
+title = Khung giường bằng kim loại gần Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = giương mn 1
 url = https://www.diepxuan.com/giuong-mn-1.html
 
 [giuonggaphoaphat.com]
-match = -81.8%%
-title = GIƯỜNG GẤP NHẬP KHẨU NHẬT BẢN
-url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
+match = -27.3%%
+title = Giuonggaphoaphat.com
+url = http://giuonggaphoaphat.com/
 
 [noithatdogodungduyen.com]
 match = -136.4%%
