--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-03 14:23:30
+lastsearch = 2024-08-03 15:33:23
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnlid5eR&sig=ACfU3U3xKW7iQDeJr9ONAN5MDVbx3sVKJA&hl=en&sa=X&ved=2ahUKEwjP6YyRpdiHAxU-g4kEHbyuPC0Q6AF6BAgYEAM
+match = -217.6%%
+title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilnUBwXZH&sig=ACfU3U2pQQznHv0zX4iUuzTR8mcReJu8Xw&hl=en&sa=X&ved=2ahUKEwigoZvgtNiHAxUtFVkFHa6QGqoQ6AF6BAgcEAM
 
 [tax.vermont.gov]
 match = -29.4%%
