--- a/images/vo-goi-ke-warmdream-45x65-hq/config.ini
+++ b/images/vo-goi-ke-warmdream-45x65-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 lastopen = 2024-07-01 10:42:00
 
 [search]
-lastsearch = 2024-08-03 11:50:02
+lastsearch = 2024-08-03 15:41:25
 
 [www.diepxuan.com]
-match = 28.6%%
-title = Điệp Xuân Vỏ gối kê màu 45x65
-url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html
+match = 35.7%%
+title = Vỏ gối kê màu 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html?srsltid=AfmBOoriqclpyvhs9e7OZP-yR8Nm47gPu4fP6T0jZn7NhAoxyvpNarzS
 
 [www.head-fi.org]
 match = 8.0%%
